# soundseeker-song-service

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  deployment.yaml  hpa.yaml  ns.yaml  service.yaml
.github/workflows/: cd.yml  ci.yml  pipeline.yml  pipeline_main.yml
migrations/: 0001_songs_table.sql  0002_hashes_table.sql
proto/: echo.proto  song.proto
src/: grpc.rs  main.rs  prometheus.rs  rabbitmq.rs
src/db/: mod.rs  pg.rs
