[package]
name = "song_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
sqlx = {version = "0.6", features = ["postgres", "runtime-tokio-rustls", "macros"]}
cargo-watch = "8.5.2"
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
metrics-util = "0.16.3"


[build-dependencies]
tonic-build = "0.11.0"
